# gorillats

./: .gitignore  CMakeLists.txt  README.md  conandata.yml  conanfile.py  pyproject.toml
.github/workflows/: ci.yml  release.yml
cmake/: gorillatsConfig.cmake.in
include/gorillats/: gorillats.h  gorillats.hpp
python/: bindings.cpp
python/gorillats/: __init__.py
rust/: Cargo.toml
rust/gorillats/: Cargo.toml
rust/gorillats-sys/: Cargo.toml  build.rs
rust/gorillats-sys/src/: lib.rs
rust/gorillats/src/: lib.rs
rust/gorillats/tests/: roundtrip.rs
src/: gorillats.c
test_package/: CMakeLists.txt  conanfile.py
test_package/src/: example.cpp
tests/: test_compression.cpp  test_compression.py
