[package]
name = "gorillats-sys"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Raw FFI bindings to the gorillats C core (Gorilla time series compression)."
repository = "https://github.com/asoss/gorillats"
links = "gorillats"
build = "build.rs"
include = ["src/**", "c/**", "build.rs", "Cargo.toml"]

[build-dependencies]
cc = "1.0"
